Slightly more robust (but ugly) url generation